--- a/templates/import.j2
+++ b/templates/import.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
-$IMPORT_FILES_DIR="{{ import_files_dir }}"
-if [ ! -f $IMPORT_FILES_DIR/.firefly-import-pending ]; then
+IMPORT_FILES_DIR="{{ import_files_dir }}"
+if [ ! -f "$IMPORT_FILES_DIR/.firefly-import-pending" ]; then
     exit 0
 fi
-docker run --rm --network="{{ docker_network_name }}" -v $IMPORT_FILES_DIR:/import -e FIREFLY_III_ACCESS_TOKEN={{ firefly_3_access_token }} -e IMPORT_DIR_ALLOWLIST=/import -e FIREFLY_III_URL={{ firefly_3_url }} -e WEB_SERVER=false -e LOG_LEVEL=info fireflyiii/data-importer:latest
+docker run --rm --network="{{ docker_network_name }}" -v "$IMPORT_FILES_DIR:/import" -e FIREFLY_III_ACCESS_TOKEN={{ firefly_3_access_token }} -e IMPORT_DIR_ALLOWLIST=/import -e FIREFLY_III_URL={{ firefly_3_url }} -e WEB_SERVER=false -e LOG_LEVEL=info fireflyiii/data-importer:latest
 rm $IMPORT_FILES_DIR/.firefly-import-pending
