--- a/templates/import.j2
+++ b/templates/import.j2
@@ -8,5 +8,9 @@ fi
 
 docker run --rm --network="{{ docker_network_name }}" -v "$IMPORT_FILES_DIR:/import" -e FIREFLY_III_ACCESS_TOKEN={{ firefly_3_access_token }} -e IMPORT_DIR_ALLOWLIST=/import -e FIREFLY_III_URL={{ firefly_3_url }} -e WEB_SERVER=false -e LOG_LEVEL=info fireflyiii/data-importer:latest
 
+CSV_COUNT=$(ls -1 $IMPORT_FILES_DIR/*.csv 2>/dev/null | wc -l)
+
+curl -X POST -d '{"body":" $CSV_COUNT files imported"}' -H "Content-Type: application/json" {{ notifications_endpoint }}
+
 # Cleanup after import
 rm $IMPORT_FILES_DIR/*.csv $IMPORT_FILES_DIR/*.json
